# menu_demo

./: Cargo.toml
src/: game_play.rs  input_plugin.rs  lib.rs  main.rs  main_menu.rs  plugins.rs  screens.rs  title.rs  ui.rs
src/game_play/: mod.rs  pause_menu.rs  player_plugin.rs
src/plugins/: cue_focus_camera_plugin.rs  input_plugin.rs  mouse_tracking_plugin.rs
src/screens/: game_play.rs  title.rs
src/screens/game_play/: pause_menu.rs  placeholder_map.rs  player_plugin.rs
src/ui/: button_plugin.rs  mod.rs
src/ui/screens/: main_menu.rs  mod.rs  second_menu.rs
