[package]
name = "menu_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Note: remove the "dynamic_linking" feature if publishing a release
# Note: could also use `cargo run --features bevy/dynamic_linking`
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
bevy_egui = "0.20.2"

# Start optimizations (https://bevy-cheatbook.github.io/pitfalls/performance.html)

# Uncomment if performance becomes an issue in debug mode
# # Enable only a small amount of optimization in debug mode
# [profile.dev]
# opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Uncomment if release performance is not good enough
# # Enable more runtime performance at the cost of *very long* builds
# [profile.release]
# lto = "thin"

# End optimizations
